# 3Dhopd-pca

./: 3DHoPD_robustness_to_rotations  CMakeCache.txt  CMakeLists.txt  Makefile  ans.txt  cmake_install.cmake  output-20jun.txt  recognition_results.csv  result_summary.txt  summarize_results.py
data_collected/: b1.pcd  b1.ply  b2.pcd  b2.ply  g3.pcd  g7.pcd
data_collected/check/: test_scene_bucket.txt  test_scene_chair.txt  test_scene_laptop.txt  test_scene_wall.txt
data_collected/final_object/: bucket.pcd  bucket.ply  chair.pcd  chair.ply  doll.pcd  doll.ply  fan.pcd  fan.ply  laptop.pcd  laptop.ply  shoes.pcd  shoes.ply  wall.pcd  wall.ply
data_collected/scene/: test_scene_bucket.pcd  test_scene_chair_wall.pcd  test_scene_doll_2.pcd  test_scene_fan.pcd  test_scene_laptop.pcd  test_scene_shoe.pcd
include/3DHoPD/: 3DHoPD.h
src/: 3DHoPD.cpp  3DHoPD_robustness_to_rotations.cpp
